# health-data-pipeline

./: .env  .gitignore  README.md  SESSION_PROGRESS.md  STARTUP_INSTRUCTIONS.md  dashboard.py  dev.sh  docker-compose.db.yml  pyproject.toml  requirements.txt
airflow_health_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
airflow_home/: airflow.cfg  standalone_admin_password.txt
dags/: health_data_pipeline.py
utils/: lab_parser.py  session progress.txt
